# htmx-rust-app

./: Cargo.toml
src/: handler.rs  main.rs
templates/: index.html
