[package]
name = "htmx-rust-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34.0", features = ["full"] }
askama = "0.12.1"
